--- a/app/build.gradle
+++ b/app/build.gradle
@@ -37,6 +37,19 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.3.1'
     implementation 'com.google.android.material:material:1.4.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.0'
+
+    //Kotlin coroutines
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.5.1'
+
+    //Fuel
+    //core
+    implementation 'com.github.kittinunf.fuel:fuel:2.3.1'
+    //packages
+
+    implementation 'com.github.kittinunf.result:result:4.0.0' //for jvm
+    implementation 'com.github.kittinunf.result:result-coroutines:4.0.0' //for kotlin's coroutine support
+
+
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
