--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,13 +13,13 @@
         android:theme="@style/Theme.TodoApp"
         android:usesCleartextTraffic="true">
         <activity
-            android:name=".TodoActivity"
+            android:name="eu.lucasblommers.todoapp.TodoActivity"
             android:exported="true" />
         <activity
-            android:name=".RegisterActivity"
+            android:name="eu.lucasblommers.todoapp.RegisterActivity"
             android:exported="true" />
         <activity
-            android:name=".LoginActivity"
+            android:name="eu.lucasblommers.todoapp.LoginActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
